# src/modules/party/dtos/party.req.dto.ts
@@ -1,4 +1,4 @@
-import { IsBoolean, IsNumber, IsString } from "class-validator";
+import { IsBoolean, IsNumber, IsOptional, IsString } from "class-validator";
 
 export class PartyCreateReqDto {
   /**
@@ -54,4 +54,69 @@ export class PartyCreateReqDto {
    */
   @IsString()
   azitIconUrl!: string;
+}
+
+export class PartyUpdateReqDto {
+  /**
+   * @example 1
+   */
+  @IsOptional()
+  @IsNumber()
+  gameId?: number;
+
+  /**
+   * @example "수정된 파티 제목"
+   */
+  @IsOptional()
+  @IsString()
+  title?: string;
+
+  /**
+   * @example "수정된 파티 내용"
+   */
+  @IsOptional()
+  @IsString()
+  memo?: string;
+
+  /**
+   * @example 1
+   */
+  @IsOptional()
+  @IsNumber()
+  recruitmentPeople?: number;
+
+  /**
+   * @example 1
+   */
+  @IsOptional()
+  @IsNumber()
+  tierId?: number;
+
+  /**
+   * @example [1, 2]
+   */
+  @IsOptional()
+  @IsNumber({}, { each: true })
+  positionIds?: number[];
+
+  /**
+   * @example true
+   */
+  @IsOptional()
+  @IsBoolean()
+  isMicUse?: boolean;
+
+  /**
+   * @example "수정된 아지트 이름"
+   */
+  @IsOptional()
+  @IsString()
+  azitName?: string;
+
+  /**
+   * @example "수정된 아지트 아이콘 URL"
+   */
+  @IsOptional()
+  @IsString()
+  azitIconUrl?: string;
 }
